<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/bottomLinear"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_mm"
        android:layout_marginBottom="@dimen/size_m">

        <TextView
            android:id="@+id/tvPerfect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:text="@string/tv_video_info"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:text="@string/tv_navigation"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:text="@string/tv_my_account"
            android:gravity="center"
            />
    </LinearLayout>



</LinearLayout>