<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/sign_in_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_m"
        android:layout_marginLeft="@dimen/size_m"
        android:layout_marginRight="@dimen/size_m"
        android:layout_marginTop="@dimen/size_m"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_m"
                android:layout_marginRight="@dimen/size_m">

                <AutoCompleteTextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_m"
                android:layout_marginRight="@dimen/size_m">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="@dimen/size_m"
                android:text="@string/forget_password"
                android:textColor="@color/colorAccent"
                />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_m"
                android:layout_marginRight="@dimen/size_m"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="@dimen/size_ms"
                app:cardElevation="@dimen/size_s">

                <Button
                    android:id="@+id/email_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/action_login"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_m"
                android:layout_marginRight="@dimen/size_m"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="@dimen/size_ms"
                app:cardElevation="@dimen/size_s">
                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
